--- a/src/style.css
+++ b/src/style.css
@@ -75,3 +75,25 @@ li:first-letter {
 .weather-temperature .active:hover {
   text-decoration: none;
 }
+
+.weather-forecast {
+  margin-top: 40px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.9;
+}
+
+.weather-forecast-temperature-max {
+  font-size: 15px;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.9;
+}
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
